--- a/2_contrasts_model.ipynb
+++ b/2_contrasts_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,29 +25,38 @@
     "from monai.data import Dataset, DataLoader, CacheDataset\n",
     "from monai.transforms import (\n",
     "    Compose,\n",
-    "    LoadImaged,\n",
-    "    AddChanneld,\n",
-    "    Spacingd,\n",
-    "    Orientationd,\n",
-    "    ScaleIntensityRanged,\n",
-    "    RandCropByPosNegLabeld,\n",
+    "    RandScaleCrop,\n",
     "    RandFlipd,\n",
     "    RandRotate90d,\n",
+    "    RandRotate,\n",
     "    RandShiftIntensityd,\n",
     "    ToTensord,\n",
+    "    \n",
     ")\n",
     "import os\n",
     "import nibabel as nib\n",
     "import json\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import monai\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for T1w, T2w, and DWI files in data//data-multi-subject// ...\n",
+      "Found 20 T1w files and 20 T2w files.\n"
+     ]
+    }
+   ],
    "source": [
     "# this cell aims at extracting the list of path relevant for the first model test which takes T1w T2w adn DWI as input\n",
     "\n",
@@ -83,26 +92,17 @@
     "            # Append the relative path to the T2w file paths list\n",
     "            t2w_file_paths.append(relative_path)\n",
     "\n",
+    "t1w_file_paths = t1w_file_paths[:20]\n",
+    "t2w_file_paths = t2w_file_paths[:20]\n",
+    "\n",
     "print(\"Found\", len(t1w_file_paths), \"T1w files and\", len(t2w_file_paths), \"T2w files.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img_data\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Define a custom dataset class\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mCustomDataset\u001b[39;00m(\u001b[43mDataset\u001b[49m):\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data, transform\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m data\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Dataset' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a function to load image data\n",
     "def load_image(image_path):\n",
@@ -119,6 +119,8 @@
     "        view = np.random.choice([0, 1, 2]) # 0: sagittal, 1: coronal, 2: axial\n",
     "        # randomly select an index for wich we will extract the 2D image among the index which were not yet selected\n",
     "        index = np.random.choice([i for i in range(image.shape[view]) if i not in selected_perax[view]])\n",
+    "        # choose randomly if the image is cropped or not  \n",
+    "\n",
     "        if view == 0:\n",
     "            image_2D = image[index, :, :]\n",
     "        elif view == 1:\n",
@@ -132,13 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            image_path   label\n",
+      "0  sub-amu01\\anat\\sub-amu01_T1w.nii.gz  [1, 0]\n",
+      "1  sub-amu02\\anat\\sub-amu02_T1w.nii.gz  [1, 0]\n",
+      "2  sub-amu03\\anat\\sub-amu03_T1w.nii.gz  [1, 0]\n",
+      "3  sub-amu04\\anat\\sub-amu04_T1w.nii.gz  [1, 0]\n",
+      "4  sub-amu05\\anat\\sub-amu05_T1w.nii.gz  [1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# split the data into training and validation sets\n",
-    "path_data = pd.DataFrame({\"image_path\": t1w_file_paths, \"label\": [1,0]})\n",
-    "path_data = path_data.append(pd.DataFrame({\"image_path\": t2w_file_paths, \"label\": [0,1]}), ignore_index=True)\n",
+    "\n",
+    "# build a dataset with a colmn \"file path\" wich contiains the paths listed in both t1w_file_paths and t2w_file_paths\n",
+    "path_data = pd.DataFrame({\"image_path\" : t1w_file_paths + t2w_file_paths, \"label\" : len(t1w_file_paths) * [[1,0]] + len(t2w_file_paths) * [[0,1]]})\n",
+    "print(path_data.head())\n",
+    "\n",
     "train_data, val_data = train_test_split(path_data, test_size=0.2, random_state=0)\n",
     "\n",
     "# load the 3D images\n",
@@ -161,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a custom dataset class\n",
-    "class CustomDataset(Dataset):\n",
+    "class Dataset_2D(Dataset):\n",
     "    def __init__(self, data, transform=None):\n",
     "        self.data = data\n",
     "        self.transform = transform\n",
@@ -190,6 +208,7 @@
     "        RandRotate90d(keys=[\"image\"], prob=0.5),\n",
     "        RandFlipd(keys=[\"image\"], prob=0.5),\n",
     "        RandShiftIntensityd(keys=[\"image\"], offsets=0.1, prob=0.5),\n",
+    "        RandScaleCrop([np.random.uniform(0.5, 1), np.random.uniform(0.5,1)], random_center=True),\n",
     "        ToTensord(keys=[\"image\"]),\n",
     "    ]\n",
     ")\n"
@@ -197,57 +216,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the training and validation transforms\n",
-    "# Define transforms for training data\n",
-    "train_transforms = Compose(\n",
-    "    [\n",
-    "        LoadImaged(keys=\"image\"),\n",
-    "        AddChanneld(keys=\"image\"),\n",
-    "        Spacingd(keys=\"image\", pixdim=(1.5, 1.5, 2.0), mode=(\"bilinear\", \"nearest\")),\n",
-    "        Orientationd(keys=\"image\", axcodes=\"RAS\"),\n",
-    "        ScaleIntensityRanged(keys=\"image\", a_min=-65, a_max=405, b_min=0.0, b_max=1.0, clip=True),\n",
-    "        RandCropByPosNegLabeld(keys=\"image\", label_key=\"label\", spatial_size=(96, 96, 96), pos=1, neg=1, num_samples=4),\n",
-    "        RandFlipd(keys=\"image\", prob=0.5, spatial_axis=0),\n",
-    "        RandRotate90d(keys=\"image\", prob=0.5, max_k=3),\n",
-    "        RandShiftIntensityd(keys=\"image\", offsets=0.1, prob=0.5),\n",
-    "        ToTensord(keys=\"image\"),\n",
-    "    ]\n",
-    ")\n",
+    "# Build the training and validation datasets\n",
+    "train_dataset = Dataset_2D(train_data_2D, transform=train_transforms)\n",
+    "val_dataset = Dataset_2D(val_data_2D, transform=train_transforms)\n",
     "\n",
-    "# Define transforms for testing data\n",
-    "test_transforms = Compose(\n",
-    "    [\n",
-    "        LoadImaged(keys=\"image\"),\n",
-    "        AddChanneld(keys=\"image\"),\n",
-    "        Spacingd(keys=\"image\", pixdim=(1.5, 1.5, 2.0), mode=(\"bilinear\", \"nearest\")),\n",
-    "        Orientationd(keys=\"image\", axcodes=\"RAS\"),\n",
-    "        ScaleIntensityRanged(keys=\"image\", a_min=-65, a_max=405, b_min=0.0, b_max=1.0, clip=True),\n",
-    "        ToTensord(keys=\"image\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# LoadImaged: Load the image data from the specified keys\n",
-    "# AddChanneld: Add a channel dimension to the image data\n",
-    "# Spacingd: Resample the image data to have a specified pixel dimension and interpolation mode\n",
-    "# Orientationd: Reorient the image data to have a specified axis code\n",
-    "# ScaleIntensityRanged: Scale the intensity values of the image data to a specified range\n",
-    "# RandCropByPosNegLabeld: Randomly crop the image data based on positive and negative labels\n",
-    "# RandFlipd: Randomly flip the image data along the specified spatial axis\n",
-    "# RandRotate90d: Randomly rotate the image data by 90 degrees\n",
-    "# RandShiftIntensityd: Randomly shift the intensity values of the image data\n",
-    "# ToTensord: Convert the image data to a tensor format"
+    "# Create data loaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=10, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "model = monai.networks.nets.UNet(\n",
+    "    spatial_dims=2,\n",
+    "    in_channels=1,\n",
+    "    out_channels=2,\n",
+    "    channels=(16, 32, 64, 128, 256),\n",
+    "    strides=(2, 2, 2, 2),\n",
+    "    num_res_units=2,\n",
+    ").to(device)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
