--- a/2_contrasts_model.ipynb
+++ b/2_contrasts_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import nibabel as nib\n",
     "import pandas as pd\n",
     "from monai.data import Dataset, DataLoader, CacheDataset\n",
+    "import torchvision.models as models\n",
     "from monai.transforms import (\n",
     "    Compose,\n",
     "    RandScaleCrop,\n",
@@ -40,12 +41,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "import monai\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,31 +228,100 @@
     "train_dataset = Dataset_2D(train_data_2D, transform=train_transforms)\n",
     "val_dataset = Dataset_2D(val_data_2D, transform=train_transforms)\n",
     "\n",
+    "\n",
     "# Create data loaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=10, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=10)"
+    "train_loader = DataLoader(train_dataset.data, batch_size=10, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset.data, batch_size=10)\n",
+    "\n",
+    "train_dataset.data[0][0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bapti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\bapti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5767, 0.5020],\n",
+      "        [0.8802, 0.8488],\n",
+      "        [0.0636, 0.6604]], grad_fn=<SigmoidBackward0>)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[50], line 28\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(output)  \u001b[38;5;66;03m# torch.Size([5, 2]\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m#print(output.squeeze(-1).shape)  # torch.Size([2, 4])\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m \u001b[43mtrain_dataset\u001b[49m\u001b[38;5;241m.\u001b[39mdata[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
+    "class ResNet18SingleChannel(nn.Module):\n",
+    "    # Define the ResNet18 model with a single input channel and an output value between 0 and 1\n",
+    "    def __init__(self, num_classes=2):\n",
+    "        super(ResNet18SingleChannel, self).__init__()\n",
+    "        # Load the pre-trained ResNet18 model\n",
+    "        resnet = models.resnet18(pretrained=True)\n",
+    "        # Modify the first convolutional layer to take a single channel input\n",
+    "        resnet.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=1, padding=3, bias=False)\n",
+    "        # Modify the final fully connected layer to output a single value\n",
     "\n",
-    "model = monai.networks.nets.UNet(\n",
-    "    spatial_dims=2,\n",
-    "    in_channels=1,\n",
-    "    out_channels=2,\n",
-    "    channels=(16, 32, 64, 128, 256),\n",
-    "    strides=(2, 2, 2, 2),\n",
-    "    num_res_units=2,\n",
-    ").to(device)\n",
+    "        self.resnet = resnet\n",
     "\n",
+    "        #final fc to go from [batch_size, 1000] to [batch_size, num_classes]\n",
+    "        self.fc = nn.Linear(1000, num_classes)\n",
     "\n",
-    "\n"
+    "    def forward(self, x):\n",
+    "        x = self.resnet(x)\n",
+    "        x = self.fc(x)\n",
+    "        x = torch.sigmoid(x)\n",
+    "        return x\n",
+    "\n",
+    "model = ResNet18SingleChannel(num_classes=2).to(device)\n",
+    "\n",
+    "#output = model.forward(torch.randn(3, 1, 49, 29))\n",
+    "#print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the model\n",
+    "model.eval()\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for batch in val_loader:\n",
+    "        images, labels = batch\n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels.argmax(dim=1)).sum().item()\n",
+    "print(f\"Validation accuracy: {correct / total}\")\n"
    ]
   }
  ],
